// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`io-input — render snapshots > renders default state 1`] = `
<io-input size="md" state="none" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="input-wrapper">
      <div class="input-field-row">
        <span class="input-slot input-slot--prefix input-slot--hidden">
          <slot name="prefix"></slot>
        </span>
        <input id="io-input-4fzzzxjylrx" class="input-field input-field--md" type="text" value placeholder="name@example.com" inputmode="text" aria-describedby="io-input-4fzzzxjylrx-error">
        <span class="input-slot input-slot--suffix input-slot--hidden">
          <slot name="suffix"></slot>
        </span>
      </div>
      <label for="io-input-4fzzzxjylrx" class="input-label">
        <span class="input-label__slot input-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Email
        </span>
      </label>
    </div>
    <p id="io-input-4fzzzxjylrx-error" class="input-message input-error--hidden"></p>
    <p id="io-input-4fzzzxjylrx-helper" class="input-helper input-helper--hidden">
      <span class="input-description__slot input-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-input>
`;

exports[`io-input — render snapshots > renders disabled state 1`] = `
<io-input size="md" disabled state="none" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="input-wrapper input-wrapper--disabled">
      <div class="input-field-row">
        <span class="input-slot input-slot--prefix input-slot--hidden">
          <slot name="prefix"></slot>
        </span>
        <input id="io-input-4fzzzxjylrx" class="input-field input-field--md" type="text" value="Read only" placeholder=" " disabled inputmode="text" aria-describedby="io-input-4fzzzxjylrx-error">
        <span class="input-slot input-slot--suffix input-slot--hidden">
          <slot name="suffix"></slot>
        </span>
      </div>
      <label for="io-input-4fzzzxjylrx" class="input-label">
        <span class="input-label__slot input-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Disabled
        </span>
      </label>
    </div>
    <p id="io-input-4fzzzxjylrx-error" class="input-message input-error--hidden"></p>
    <p id="io-input-4fzzzxjylrx-helper" class="input-helper input-helper--hidden">
      <span class="input-description__slot input-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-input>
`;

exports[`io-input — render snapshots > renders input types 1`] = `
MockHTMLElement {
  "__attributeMap": MockAttributeMap {
    "__items": [
      MockAttr {
        "_name": "__self",
        "_namespaceURI": null,
        "_value": "[object global]",
      },
      MockAttr {
        "_name": "__source",
        "_namespaceURI": null,
        "_value": "[object Object]",
      },
    ],
    "caseInsensitive": true,
  },
  "__namespaceURI": "http://www.w3.org/1999/xhtml",
  "__shadowRoot": null,
  "__style": undefined,
  "_childNodes": [
    <io-input size="md" state="none" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="input-wrapper">
      <div class="input-field-row">
        <span class="input-slot input-slot--prefix input-slot--hidden">
          <slot name="prefix"></slot>
        </span>
        <input id="io-input-4fzzzxjylrx" class="input-field input-field--md" type="email" value placeholder=" " inputmode="text" aria-describedby="io-input-4fzzzxjylrx-error">
        <span class="input-slot input-slot--suffix input-slot--hidden">
          <slot name="suffix"></slot>
        </span>
      </div>
      <label for="io-input-4fzzzxjylrx" class="input-label">
        <span class="input-label__slot input-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Email
        </span>
      </label>
    </div>
    <p id="io-input-4fzzzxjylrx-error" class="input-message input-error--hidden"></p>
    <p id="io-input-4fzzzxjylrx-helper" class="input-helper input-helper--hidden">
      <span class="input-description__slot input-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-input>,
    <io-input size="md" state="none" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="input-wrapper">
      <div class="input-field-row">
        <span class="input-slot input-slot--prefix input-slot--hidden">
          <slot name="prefix"></slot>
        </span>
        <input id="io-input-4fzzzxjylrx" class="input-field input-field--md" type="search" value placeholder=" " inputmode="text" aria-describedby="io-input-4fzzzxjylrx-error">
        <span class="input-slot input-slot--suffix input-slot--hidden">
          <slot name="suffix"></slot>
        </span>
      </div>
      <label for="io-input-4fzzzxjylrx" class="input-label">
        <span class="input-label__slot input-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Search
        </span>
      </label>
    </div>
    <p id="io-input-4fzzzxjylrx-error" class="input-message input-error--hidden"></p>
    <p id="io-input-4fzzzxjylrx-helper" class="input-helper input-helper--hidden">
      <span class="input-description__slot input-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-input>,
    <io-input size="md" state="none" class="hydrated">
  <mock:shadow-root shadowrootdelegatesfocus>
    <div class="input-wrapper">
      <div class="input-field-row">
        <span class="input-slot input-slot--prefix input-slot--hidden">
          <slot name="prefix"></slot>
        </span>
        <input id="io-input-4fzzzxjylrx" class="input-field input-field--md" type="tel" value placeholder=" " inputmode="text" aria-describedby="io-input-4fzzzxjylrx-error">
        <span class="input-slot input-slot--suffix input-slot--hidden">
          <slot name="suffix"></slot>
        </span>
      </div>
      <label for="io-input-4fzzzxjylrx" class="input-label">
        <span class="input-label__slot input-label__slot--hidden">
          <slot name="label"></slot>
        </span>
        <span>
          Telephone
        </span>
      </label>
    </div>
    <p id="io-input-4fzzzxjylrx-error" class="input-message input-error--hidden"></p>
    <p id="io-input-4fzzzxjylrx-helper" class="input-helper input-helper--hidden">
      <span class="input-description__slot input-description__slot--hidden">
        <slot name="description"></slot>
      </span>
    </p>
  </mock:shadow-root>
</io-input>,
  ],
  "_nodeValue": null,
  "nodeName": "DIV",
  "nodeType": 1,
  "ownerDocument": _MockDocument {
    "__attributeMap": MockAttributeMap {
      "__items": [],
      "caseInsensitive": true,
    },
    "__listeners": [
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerdown",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerover",
      },
      MockEventListener {
        "handler": [Function],
        "type": "pointerout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusin",
      },
      MockEventListener {
        "handler": [Function],
        "type": "focusout",
      },
      MockEventListener {
        "handler": [Function],
        "type": "keydown",
      },
      MockEventListener {
        "handler": null,
        "type": "e",
      },
    ],
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      MockDocumentTypeNode {
        "__attributeMap": MockAttributeMap {
          "__items": [
            MockAttr {
              "_name": "html",
              "_namespaceURI": null,
              "_value": "",
            },
          ],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [],
        "_nodeValue": null,
        "nodeName": "!DOCTYPE",
        "nodeType": 10,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
      MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              _MockTextNode {
                "_childNodes": [],
                "_nodeValue": "http://localhost:3000/",
                "nodeName": "#text",
                "nodeType": 3,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "class",
                      "_namespaceURI": null,
                      "_value": "stencil-component-stage",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "DIV",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "nodeName": "BODY",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": [Circular],
        "parentNode": [Circular],
      },
    ],
    "_nodeValue": null,
    "cookie": "",
    "defaultView": [Object],
    "nodeName": "#document",
    "nodeType": 9,
    "ownerDocument": null,
    "parentNode": null,
    "referrer": "",
  },
  "parentNode": MockHTMLElement {
    "__attributeMap": MockAttributeMap {
      "__items": [
        MockAttr {
          "_name": "class",
          "_namespaceURI": null,
          "_value": "stencil-component-stage",
        },
      ],
      "caseInsensitive": true,
    },
    "__namespaceURI": "http://www.w3.org/1999/xhtml",
    "__shadowRoot": null,
    "__style": undefined,
    "_childNodes": [
      [Circular],
    ],
    "_nodeValue": null,
    "nodeName": "DIV",
    "nodeType": 1,
    "ownerDocument": _MockDocument {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__listeners": [
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerdown",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerover",
        },
        MockEventListener {
          "handler": [Function],
          "type": "pointerout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusin",
        },
        MockEventListener {
          "handler": [Function],
          "type": "focusout",
        },
        MockEventListener {
          "handler": [Function],
          "type": "keydown",
        },
        MockEventListener {
          "handler": null,
          "type": "e",
        },
      ],
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": undefined,
      "_childNodes": [
        MockDocumentTypeNode {
          "__attributeMap": MockAttributeMap {
            "__items": [
              MockAttr {
                "_name": "html",
                "_namespaceURI": null,
                "_value": "",
              },
            ],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [],
          "_nodeValue": null,
          "nodeName": "!DOCTYPE",
          "nodeType": 10,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
        MockHTMLElement {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockStyleElement {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "data-styles",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    _MockTextNode {
                      "_childNodes": [],
                      "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "nodeName": "#text",
                      "nodeType": 3,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                  ],
                  "_nodeValue": null,
                  "nodeName": "STYLE",
                  "nodeType": 1,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                  "sheet": MockCSSStyleSheet {
                    "cssRules": [
                      MockCSSRule {
                        "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "parentStyleSheet": [Circular],
                        "type": 0,
                      },
                    ],
                    "ownerNode": [Circular],
                    "parentStyleSheet": null,
                    "type": "text/css",
                  },
                },
              ],
              "_nodeValue": null,
              "nodeName": "HEAD",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            MockHTMLElement {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                _MockTextNode {
                  "_childNodes": [],
                  "_nodeValue": "http://localhost:3000/",
                  "nodeName": "#text",
                  "nodeType": 3,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "nodeName": "BODY",
              "nodeType": 1,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
          ],
          "_nodeValue": null,
          "nodeName": "HTML",
          "nodeType": 1,
          "ownerDocument": [Circular],
          "parentNode": [Circular],
        },
      ],
      "_nodeValue": null,
      "cookie": "",
      "defaultView": [Object],
      "nodeName": "#document",
      "nodeType": 9,
      "ownerDocument": null,
      "parentNode": null,
      "referrer": "",
    },
    "parentNode": MockHTMLElement {
      "__attributeMap": MockAttributeMap {
        "__items": [],
        "caseInsensitive": true,
      },
      "__namespaceURI": "http://www.w3.org/1999/xhtml",
      "__shadowRoot": null,
      "__style": undefined,
      "_childNodes": [
        _MockTextNode {
          "_childNodes": [],
          "_nodeValue": "http://localhost:3000/",
          "nodeName": "#text",
          "nodeType": 3,
          "ownerDocument": _MockDocument {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__listeners": [
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerdown",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerover",
              },
              MockEventListener {
                "handler": [Function],
                "type": "pointerout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusin",
              },
              MockEventListener {
                "handler": [Function],
                "type": "focusout",
              },
              MockEventListener {
                "handler": [Function],
                "type": "keydown",
              },
              MockEventListener {
                "handler": null,
                "type": "e",
              },
            ],
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockDocumentTypeNode {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "html",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [],
                "_nodeValue": null,
                "nodeName": "!DOCTYPE",
                "nodeType": 10,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockHTMLElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      MockStyleElement {
                        "__attributeMap": MockAttributeMap {
                          "__items": [
                            MockAttr {
                              "_name": "data-styles",
                              "_namespaceURI": null,
                              "_value": "",
                            },
                          ],
                          "caseInsensitive": true,
                        },
                        "__namespaceURI": "http://www.w3.org/1999/xhtml",
                        "__shadowRoot": null,
                        "__style": undefined,
                        "_childNodes": [
                          _MockTextNode {
                            "_childNodes": [],
                            "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                            "nodeName": "#text",
                            "nodeType": 3,
                            "ownerDocument": [Circular],
                            "parentNode": [Circular],
                          },
                        ],
                        "_nodeValue": null,
                        "nodeName": "STYLE",
                        "nodeType": 1,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                        "sheet": MockCSSStyleSheet {
                          "cssRules": [
                            MockCSSRule {
                              "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                              "parentStyleSheet": [Circular],
                              "type": 0,
                            },
                          ],
                          "ownerNode": [Circular],
                          "parentStyleSheet": null,
                          "type": "text/css",
                        },
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "HEAD",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                  },
                  [Circular],
                ],
                "_nodeValue": null,
                "nodeName": "HTML",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
            ],
            "_nodeValue": null,
            "cookie": "",
            "defaultView": [Object],
            "nodeName": "#document",
            "nodeType": 9,
            "ownerDocument": null,
            "parentNode": null,
            "referrer": "",
          },
          "parentNode": [Circular],
        },
        [Circular],
      ],
      "_nodeValue": null,
      "nodeName": "BODY",
      "nodeType": 1,
      "ownerDocument": _MockDocument {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__listeners": [
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerdown",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerover",
          },
          MockEventListener {
            "handler": [Function],
            "type": "pointerout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusin",
          },
          MockEventListener {
            "handler": [Function],
            "type": "focusout",
          },
          MockEventListener {
            "handler": [Function],
            "type": "keydown",
          },
          MockEventListener {
            "handler": null,
            "type": "e",
          },
        ],
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockDocumentTypeNode {
            "__attributeMap": MockAttributeMap {
              "__items": [
                MockAttr {
                  "_name": "html",
                  "_namespaceURI": null,
                  "_value": "",
                },
              ],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [],
            "_nodeValue": null,
            "nodeName": "!DOCTYPE",
            "nodeType": 10,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockHTMLElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  MockStyleElement {
                    "__attributeMap": MockAttributeMap {
                      "__items": [
                        MockAttr {
                          "_name": "data-styles",
                          "_namespaceURI": null,
                          "_value": "",
                        },
                      ],
                      "caseInsensitive": true,
                    },
                    "__namespaceURI": "http://www.w3.org/1999/xhtml",
                    "__shadowRoot": null,
                    "__style": undefined,
                    "_childNodes": [
                      _MockTextNode {
                        "_childNodes": [],
                        "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                        "nodeName": "#text",
                        "nodeType": 3,
                        "ownerDocument": [Circular],
                        "parentNode": [Circular],
                      },
                    ],
                    "_nodeValue": null,
                    "nodeName": "STYLE",
                    "nodeType": 1,
                    "ownerDocument": [Circular],
                    "parentNode": [Circular],
                    "sheet": MockCSSStyleSheet {
                      "cssRules": [
                        MockCSSRule {
                          "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                          "parentStyleSheet": [Circular],
                          "type": 0,
                        },
                      ],
                      "ownerNode": [Circular],
                      "parentStyleSheet": null,
                      "type": "text/css",
                    },
                  },
                ],
                "_nodeValue": null,
                "nodeName": "HEAD",
                "nodeType": 1,
                "ownerDocument": [Circular],
                "parentNode": [Circular],
              },
              [Circular],
            ],
            "_nodeValue": null,
            "nodeName": "HTML",
            "nodeType": 1,
            "ownerDocument": [Circular],
            "parentNode": [Circular],
          },
        ],
        "_nodeValue": null,
        "cookie": "",
        "defaultView": [Object],
        "nodeName": "#document",
        "nodeType": 9,
        "ownerDocument": null,
        "parentNode": null,
        "referrer": "",
      },
      "parentNode": MockHTMLElement {
        "__attributeMap": MockAttributeMap {
          "__items": [],
          "caseInsensitive": true,
        },
        "__namespaceURI": "http://www.w3.org/1999/xhtml",
        "__shadowRoot": null,
        "__style": undefined,
        "_childNodes": [
          MockHTMLElement {
            "__attributeMap": MockAttributeMap {
              "__items": [],
              "caseInsensitive": true,
            },
            "__namespaceURI": "http://www.w3.org/1999/xhtml",
            "__shadowRoot": null,
            "__style": undefined,
            "_childNodes": [
              MockStyleElement {
                "__attributeMap": MockAttributeMap {
                  "__items": [
                    MockAttr {
                      "_name": "data-styles",
                      "_namespaceURI": null,
                      "_value": "",
                    },
                  ],
                  "caseInsensitive": true,
                },
                "__namespaceURI": "http://www.w3.org/1999/xhtml",
                "__shadowRoot": null,
                "__style": undefined,
                "_childNodes": [
                  _MockTextNode {
                    "_childNodes": [],
                    "_nodeValue": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                    "nodeName": "#text",
                    "nodeType": 3,
                    "ownerDocument": _MockDocument {
                      "__attributeMap": MockAttributeMap {
                        "__items": [],
                        "caseInsensitive": true,
                      },
                      "__listeners": [
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerdown",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerover",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "pointerout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusin",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "focusout",
                        },
                        MockEventListener {
                          "handler": [Function],
                          "type": "keydown",
                        },
                        MockEventListener {
                          "handler": null,
                          "type": "e",
                        },
                      ],
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [
                        MockDocumentTypeNode {
                          "__attributeMap": MockAttributeMap {
                            "__items": [
                              MockAttr {
                                "_name": "html",
                                "_namespaceURI": null,
                                "_value": "",
                              },
                            ],
                            "caseInsensitive": true,
                          },
                          "__namespaceURI": "http://www.w3.org/1999/xhtml",
                          "__shadowRoot": null,
                          "__style": undefined,
                          "_childNodes": [],
                          "_nodeValue": null,
                          "nodeName": "!DOCTYPE",
                          "nodeType": 10,
                          "ownerDocument": [Circular],
                          "parentNode": [Circular],
                        },
                        [Circular],
                      ],
                      "_nodeValue": null,
                      "cookie": "",
                      "defaultView": [Object],
                      "nodeName": "#document",
                      "nodeType": 9,
                      "ownerDocument": null,
                      "parentNode": null,
                      "referrer": "",
                    },
                    "parentNode": [Circular],
                  },
                ],
                "_nodeValue": null,
                "nodeName": "STYLE",
                "nodeType": 1,
                "ownerDocument": _MockDocument {
                  "__attributeMap": MockAttributeMap {
                    "__items": [],
                    "caseInsensitive": true,
                  },
                  "__listeners": [
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerdown",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerover",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "pointerout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusin",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "focusout",
                    },
                    MockEventListener {
                      "handler": [Function],
                      "type": "keydown",
                    },
                    MockEventListener {
                      "handler": null,
                      "type": "e",
                    },
                  ],
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [
                    MockDocumentTypeNode {
                      "__attributeMap": MockAttributeMap {
                        "__items": [
                          MockAttr {
                            "_name": "html",
                            "_namespaceURI": null,
                            "_value": "",
                          },
                        ],
                        "caseInsensitive": true,
                      },
                      "__namespaceURI": "http://www.w3.org/1999/xhtml",
                      "__shadowRoot": null,
                      "__style": undefined,
                      "_childNodes": [],
                      "_nodeValue": null,
                      "nodeName": "!DOCTYPE",
                      "nodeType": 10,
                      "ownerDocument": [Circular],
                      "parentNode": [Circular],
                    },
                    [Circular],
                  ],
                  "_nodeValue": null,
                  "cookie": "",
                  "defaultView": [Object],
                  "nodeName": "#document",
                  "nodeType": 9,
                  "ownerDocument": null,
                  "parentNode": null,
                  "referrer": "",
                },
                "parentNode": [Circular],
                "sheet": MockCSSStyleSheet {
                  "cssRules": [
                    MockCSSRule {
                      "cssText": "slot-fb{display:contents}slot-fb[hidden]{display:none}io-accordion,io-avatar,io-badge,io-banner,io-breadcrumb,io-breadcrumb-item,io-button,io-button-group,io-carousel,io-checkbox,io-checkbox-group,io-divider,io-drawer,io-flyout,io-form-field,io-heading,io-icon,io-inline-notification,io-input,io-input-date,io-input-password,io-input-search,io-link,io-modal,io-multi-select,io-optgroup,io-option,io-pagination,io-pin-code,io-popover,io-progress,io-radio,io-radio-group,io-scroller,io-segment,io-segmented-control,io-select,io-sheet,io-spinner,io-step,io-stepper,io-switch,io-table,io-table-body,io-table-body-cell,io-table-body-row,io-table-head,io-table-head-cell,io-table-head-row,io-tabs,io-tabs-bar,io-tag,io-tag-dismissible,io-text,io-text-list,io-textarea,io-toast,io-toast-item,io-tooltip,io-wordmark{visibility:hidden}.hydrated{visibility:inherit}",
                      "parentStyleSheet": [Circular],
                      "type": 0,
                    },
                  ],
                  "ownerNode": [Circular],
                  "parentStyleSheet": null,
                  "type": "text/css",
                },
              },
            ],
            "_nodeValue": null,
            "nodeName": "HEAD",
            "nodeType": 1,
            "ownerDocument": _MockDocument {
              "__attributeMap": MockAttributeMap {
                "__items": [],
                "caseInsensitive": true,
              },
              "__listeners": [
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerdown",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerover",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "pointerout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusin",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "focusout",
                },
                MockEventListener {
                  "handler": [Function],
                  "type": "keydown",
                },
                MockEventListener {
                  "handler": null,
                  "type": "e",
                },
              ],
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [
                MockDocumentTypeNode {
                  "__attributeMap": MockAttributeMap {
                    "__items": [
                      MockAttr {
                        "_name": "html",
                        "_namespaceURI": null,
                        "_value": "",
                      },
                    ],
                    "caseInsensitive": true,
                  },
                  "__namespaceURI": "http://www.w3.org/1999/xhtml",
                  "__shadowRoot": null,
                  "__style": undefined,
                  "_childNodes": [],
                  "_nodeValue": null,
                  "nodeName": "!DOCTYPE",
                  "nodeType": 10,
                  "ownerDocument": [Circular],
                  "parentNode": [Circular],
                },
                [Circular],
              ],
              "_nodeValue": null,
              "cookie": "",
              "defaultView": [Object],
              "nodeName": "#document",
              "nodeType": 9,
              "ownerDocument": null,
              "parentNode": null,
              "referrer": "",
            },
            "parentNode": [Circular],
          },
          [Circular],
        ],
        "_nodeValue": null,
        "nodeName": "HTML",
        "nodeType": 1,
        "ownerDocument": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
        "parentNode": _MockDocument {
          "__attributeMap": MockAttributeMap {
            "__items": [],
            "caseInsensitive": true,
          },
          "__listeners": [
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerdown",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerover",
            },
            MockEventListener {
              "handler": [Function],
              "type": "pointerout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusin",
            },
            MockEventListener {
              "handler": [Function],
              "type": "focusout",
            },
            MockEventListener {
              "handler": [Function],
              "type": "keydown",
            },
            MockEventListener {
              "handler": null,
              "type": "e",
            },
          ],
          "__namespaceURI": "http://www.w3.org/1999/xhtml",
          "__shadowRoot": null,
          "__style": undefined,
          "_childNodes": [
            MockDocumentTypeNode {
              "__attributeMap": MockAttributeMap {
                "__items": [
                  MockAttr {
                    "_name": "html",
                    "_namespaceURI": null,
                    "_value": "",
                  },
                ],
                "caseInsensitive": true,
              },
              "__namespaceURI": "http://www.w3.org/1999/xhtml",
              "__shadowRoot": null,
              "__style": undefined,
              "_childNodes": [],
              "_nodeValue": null,
              "nodeName": "!DOCTYPE",
              "nodeType": 10,
              "ownerDocument": [Circular],
              "parentNode": [Circular],
            },
            [Circular],
          ],
          "_nodeValue": null,
          "cookie": "",
          "defaultView": [Object],
          "nodeName": "#document",
          "nodeType": 9,
          "ownerDocument": null,
          "parentNode": null,
          "referrer": "",
        },
      },
    },
  },
  "s-hn": "DIV",
}
`;
